# sportsbook-assistant

./: .env.example  .gitignore  Containerfile  Makefile  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
docs/: ARCHITECTURE.md  ROADMAP.md  VISION.md
infra/compose/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml
infra/devcontainer/: Containerfile  devcontainer.json
infra/docker/: Dockerfile.dev  Dockerfile.prod  Dockerfile.test
requirements/: dev.txt  test.txt
src/app/: .env  config.py  db.py  main.py
src/app/models/: team.py
src/app/routers/: teams.py
src/app/schemas/: team.py
src/app/services/: odds_api.py
