[project]
name = "sportsbook-assistant"
version = "0.1.0"
description = "MVP Sportsbook odds aggregator with FastAPI + Postgres"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary", # Postgres driver
    "httpx", # API requests
    "pydantic",
    "python-dotenv", # manage API keys & secrets
    "pandas",
    "numpy",
]

[tool.uv]
# settings for uv (if you want to configure extras later)
